--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,27 @@
 version: '3.7'
 
 services:
-  mysql:
-    container_name: ecommerce-database
+  db1:
     image: mysql:latest
-    environment:
-      - MYSQL_ROOT_PASSWORD=123456
-      - MYSQL_DATABASE=ecommerce
-    security_opt:
-      - seccomp:unconfined
     ports:
       - "3306:3306"
-    networks:
-      - ecommerce-network
+    environment:
+      - MYSQL_ROOT_PASSWORD=123456
+      - MYSQL_DATABASE=ecommerce-auth
+  db2:
+    image: mysql:latest
+    ports:
+      - "3307:3306"
+    environment:
+      - MYSQL_ROOT_PASSWORD=123456
+      - MYSQL_DATABASE=ecommerce-product
+  db3:
+    image: mysql:latest
+    ports:
+      - "3308:3306"
+    environment:
+      - MYSQL_ROOT_PASSWORD=123456
+      - MYSQL_DATABASE=ecommerce-cart
 
 networks:
   ecommerce-network:
