--- a/auth-api/src/main/resources/application.yml
+++ b/auth-api/src/main/resources/application.yml
@@ -1,10 +1,6 @@
 server:
   port: 8081
 
-api:
-  client:
-    url: http://localhost:4200/login
-
 mysql:
   username: root
   password: 123456
@@ -28,5 +24,15 @@ spring:
     show-sql: true
     hibernate:
       ddl-auto: update
+  application:
+    name: AUTH-API
 
+eureka:
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
+  instance:
+    hostname: localhost
 
