--- a/products-api/src/main/resources/application.yml
+++ b/products-api/src/main/resources/application.yml
@@ -24,3 +24,14 @@ spring:
     show-sql: true
     hibernate:
       ddl-auto: update
+  application:
+      name: PRODUCT-API
+
+eureka:
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
+  instance:
+    hostname: localhost
