--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -26,6 +26,13 @@ spring:
           filters:
             - AuthenticationFilter
 
+        - id: paymentRoute
+          uri: lb://PAYMENT-API
+          predicates:
+            - Path=/payment/**
+          filters:
+            - AuthenticationFilter
+
     discovery:
       locator:
         lower-case-service-id: true
