--- a/payment-api/src/main/resources/application.yml
+++ b/payment-api/src/main/resources/application.yml
@@ -5,7 +5,7 @@ mysql:
   username: root
   password: 123456
   schema: ecommerce-payment
-  url: localhost:3309
+  url: db4:3309
 
 spring:
   datasource:
