--- a/products-api/src/main/resources/application.yml
+++ b/products-api/src/main/resources/application.yml
@@ -5,7 +5,7 @@ mysql:
   username: root
   password: 123456
   schema: ecommerce-product
-  url: localhost:3307
+  url: db2:3307
 
 spring:
   datasource:
