--- a/auth-api/src/main/resources/application.yml
+++ b/auth-api/src/main/resources/application.yml
@@ -5,7 +5,7 @@ mysql:
   username: root
   password: 123456
   schema: ecommerce-auth
-  url: db1:3306
+  url: localhost:3306
 
 spring:
   datasource:
@@ -24,6 +24,9 @@ spring:
     show-sql: true
     hibernate:
       ddl-auto: update
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL8Dialect
   application:
     name: AUTH-API
 
