--- a/products-api/src/main/resources/application.yml
+++ b/products-api/src/main/resources/application.yml
@@ -5,7 +5,7 @@ mysql:
   username: root
   password: 123456
   schema: ecommerce-product
-  url: db2:3307
+  url: localhost:3307
 
 spring:
   datasource:
@@ -24,8 +24,11 @@ spring:
     show-sql: true
     hibernate:
       ddl-auto: update
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL8Dialect
   application:
-      name: PRODUCT-API
+    name: PRODUCT-API
 
 eureka:
   client:
